--- a/package.json
+++ b/package.json
@@ -24,15 +24,16 @@
   },
   "homepage": "http://thoughtbot.github.io/proteus",
   "dependencies": {
-    "browser-sync": "~ 1.8.0",
-    "gulp": "~ 3.8.8",
-    "gulp-coffee": "~ 2.2.0",
-    "gulp-concat": "~ 2.4.1",
-    "gulp-gh-pages": "~ 0.4.0",
-    "gulp-include": "~ 1.1.0",
-    "gulp-ruby-haml": "~0.0.3",
-    "gulp-ruby-sass": "~ 0.7.1",
-    "gulp-sourcemaps": "~ 1.2.4",
-    "node-neat": "~ 1.3.0"
+    "browser-sync": "^2.11.2",
+    "coffee-script": "^1.10.0",
+    "gulp": "^3.9.1",
+    "gulp-coffee": "^2.3.2",
+    "gulp-concat": "^2.6.0",
+    "gulp-gh-pages": "^0.5.4",
+    "gulp-include": "^2.1.0",
+    "gulp-ruby-haml": "0.0.9",
+    "gulp-ruby-sass": "^2.0.6",
+    "gulp-sourcemaps": "^1.6.0",
+    "node-neat": "^1.7.2"
   }
 }
