--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "gulp-concat": "^2.6.0",
     "gulp-gh-pages": "^0.5.4",
     "gulp-include": "^2.1.0",
+    "gulp-jade": "^1.1.0",
     "gulp-ruby-haml": "0.0.9",
     "gulp-ruby-sass": "^2.0.6",
     "gulp-sourcemaps": "^1.6.0",
+    "lodash": "^4.9.0",
     "node-neat": "^1.7.2"
   }
 }
