--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-jade": "^1.1.0",
     "gulp-ruby-haml": "0.0.9",
     "gulp-ruby-sass": "^2.0.6",
+    "gulp-shell": "^0.5.2",
     "gulp-sourcemaps": "^1.6.0",
     "lodash": "^4.9.0",
     "node-neat": "^1.7.2"
