--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-ruby-sass": "^2.0.6",
     "gulp-shell": "^0.5.2",
     "gulp-sourcemaps": "^1.6.0",
+    "jstransformer-coffee-script": "^1.0.0",
     "jstransformer-markdown-it": "^0.2.3",
     "lodash": "^4.9.0",
     "node-neat": "^1.7.2"
