--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "http://thoughtbot.github.io/proteus",
   "dependencies": {
+    "autoprefixer": "^6.3.6",
     "browser-sync": "^2.11.2",
     "coffee-script": "^1.10.0",
     "gulp": "^3.9.1",
@@ -32,6 +33,7 @@
     "gulp-gh-pages": "^0.5.4",
     "gulp-include": "^2.1.0",
     "gulp-jade": "^1.1.0",
+    "gulp-postcss": "^6.1.0",
     "gulp-ruby-haml": "0.0.9",
     "gulp-ruby-sass": "^2.0.6",
     "gulp-shell": "^0.5.2",
