--- a/package.json
+++ b/package.json
@@ -24,23 +24,25 @@
   },
   "homepage": "http://thoughtbot.github.io/proteus",
   "dependencies": {
+    "lodash": "^4.12.0",
+    "node-bourbon": "^4.2.8",
+    "node-neat": "^1.7.2"
+  },
+  "devDependencies": {
     "autoprefixer": "^6.3.6",
-    "browser-sync": "^2.11.2",
+    "browser-sync": "^2.12.8",
     "coffee-script": "^1.10.0",
     "gulp": "^3.9.1",
     "gulp-coffee": "^2.3.2",
     "gulp-concat": "^2.6.0",
     "gulp-gh-pages": "^0.5.4",
     "gulp-include": "^2.1.0",
-    "gulp-jade": "^1.1.0",
-    "gulp-postcss": "^6.1.0",
-    "gulp-ruby-haml": "0.0.9",
-    "gulp-ruby-sass": "^2.0.6",
+    "gulp-postcss": "^6.1.1",
+    "gulp-pug": "^3.0.2",
+    "gulp-sass": "^2.3.1",
     "gulp-shell": "^0.5.2",
     "gulp-sourcemaps": "^1.6.0",
     "jstransformer-coffee-script": "^1.0.0",
-    "jstransformer-markdown-it": "^0.2.3",
-    "lodash": "^4.9.0",
-    "node-neat": "^1.7.2"
+    "jstransformer-markdown-it": "^0.2.3"
   }
 }
