--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "http://thoughtbot.github.io/proteus",
   "dependencies": {
+    "font-awesome": "^4.6.1",
     "lodash": "^4.12.0",
     "node-bourbon": "^4.2.8",
     "node-neat": "^1.7.2"
@@ -31,7 +32,10 @@
   "devDependencies": {
     "autoprefixer": "^6.3.6",
     "browser-sync": "^2.12.8",
+    "coffee-loader": "^0.7.2",
     "coffee-script": "^1.10.0",
+    "css-loader": "^0.23.1",
+    "file-loader": "^0.8.5",
     "gulp": "^3.9.1",
     "gulp-coffee": "^2.3.2",
     "gulp-concat": "^2.6.0",
@@ -43,6 +47,11 @@
     "gulp-shell": "^0.5.2",
     "gulp-sourcemaps": "^1.6.0",
     "jstransformer-coffee-script": "^1.0.0",
-    "jstransformer-markdown-it": "^0.2.3"
+    "jstransformer-markdown-it": "^0.2.3",
+    "node-sass": "^3.7.0",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack-stream": "^3.2.0"
   }
 }
