--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "coffee-script": "^1.10.0",
     "gulp": "^3.9.1",
     "gulp-coffee": "^2.3.2",
-    "gulp-concat": "^2.6.0",
     "gulp-gh-pages": "^0.5.4",
+    "gulp-haml-coffee": "0.0.6",
     "gulp-include": "^2.1.0",
     "gulp-postcss": "^6.1.1",
     "gulp-pug": "^3.0.2",
