--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gulp-haml-coffee": "0.0.6",
     "gulp-include": "^2.1.0",
     "gulp-postcss": "^6.1.1",
+    "gulp-prettify": "^0.4.0",
     "gulp-pug": "^3.0.2",
     "gulp-sass": "^2.3.1",
     "gulp-shell": "^0.5.2",
